kubernetes/readability-lisibilite-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: readability-lisibilite
spec:
  ports:
  - port: 5000
    protocol: TCP
    targetPort: 5000
  selector:
    app: readability-lisibilite
  sessionAffinity: None
  type: ClusterIP
